# EverydayHero

./: .clangd  .gitignore  CMakeLists.txt
code/: build.sh  everyday.cpp  everyday.h  sdl_everyday.cpp  sdl_everyday.h  test.out
